# maniposynth

./: .gitignore  .merlin  .ocamlinit  ARTIFACT_README.md  CNAME  How to Get Vim and Emacs to Auto-reload Files on Disk.md  Makefile  Maniposynth Fixups Before User Study.md  Maniposynth Fixups.md  README.md  UndoRedo.scpt  count_implementation_loc.rb  dune  dune-project  index.html  initial env names  interpret_intepreter_interpreting_simple_ml.ml.disabled  interpret_simple_ml.ml  interpreter.ml  parse_test.ml  playing.ml  server.ml  simple copy.ml  simple.ml  synth_stats_model.ml  test.ml
assets/: maniposynth.css  maniposynth.js  reload_on_file_changes.js
camlboot_interpreter/: .merlin  README.md  conf.ml  data.ml  dune  envir.ml  eval.ml  interp.ml  primitives.ml  runtime_base.ml  runtime_compiler.ml  runtime_lib.ml  runtime_stdlib.ml  trace.ml
closet/: rewrites_scratch
expert_eval_manual/: append.ml  bst_contains.ml  bst_contains2.ml  bst_delete.ml  bst_in_range.ml  bstd_count.ml  bstd_insert.ml  bstd_valid.ml  btree_enum.ml  btree_height.ml  btree_join.ml  btree_pretty.ml  btree_same_shape.ml  contains.ml  count.ml  distinct.ml  fold.ml  foldl.ml  foldr.ml  length.ml  ltree_fold.ml  ltree_inorder.ml  ltree_mirror.ml  nat_exp.ml  nat_factorial.ml  nat_list_max.ml  nat_list_sum.ml  nat_map_sumi.ml  nat_minus.ml  nat_mult.ml  nat_plus.ml  quickselect.ml  reverse.ml  shuffles.ml  slice.ml  snoc.ml  sort.ml  sort_by.ml
lib/: .merlin  Action.ml  Action.mli  Ast_id.ml  Ast_id.mli  Ast_utils.ml  Ast_utils.mli  Char_utils.ml  Char_utils.mli  Html_of_skeletons.ml  Html_of_skeletons.mli  ListUtils.ml  ListUtils.mli  List_utils.ml  List_utils.mli  Monomorphize.ml  Monomorphize.mli  Name_utils.ml  Name_utils.mli  Parse_unparse.ml  Parse_unparse.mli  Pos.ml  Read_execution_env.ml  Read_execution_env.mli  Show_ast.ml  Show_ast.mli  Skeleton.ml  Skeleton.mli  StringUtils.ml  (+40 more)
(+59 files in other folders)
