(executable
 (name server)
 (modules server)
 (libraries compiler-libs.common core camlboot_interpreter maniposynth_lib yojson)
 ; (preprocess (pps ppx_yojson_conv))
 )

(executable
 (name interpret_simple_ml)
 (modules interpret_simple_ml)
 (libraries camlboot_interpreter maniposynth_lib)
 ; (preprocess (pps ppx_yojson_conv))
 )

; (executable
;  (name matcher_scratch)
;  (modules matcher_scratch)
;  (libraries camlboot_interpreter compiler-libs.common)
;  )

; (executable
;  (name interpret_intepreter_interpreting_simple_ml)
;  (modules interpret_intepreter_interpreting_simple_ml)
;  (libraries camlboot_interpreter maniposynth_lib)
;  )
