(executable
 (name server)
 (modules server)
 (libraries compiler-libs.common camlboot_interpreter maniposynth_lib yojson)
 ; (preprocess (pps ppx_yojson_conv))
 )

(executable
 (name interpret_simple_ml)
 (modules interpret_simple_ml)
 (libraries camlboot_interpreter maniposynth_lib)
 ; (preprocess (pps ppx_yojson_conv))
 )

(executable
 (name scratch)
 (modules scratch)
 (libraries camlboot_interpreter compiler-libs.common maniposynth_lib)
 )

; (executable
;  (name interpret_intepreter_interpreting_simple_ml)
;  (modules interpret_intepreter_interpreting_simple_ml)
;  (libraries camlboot_interpreter maniposynth_lib)
;  )

;